--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.2",
+    "@uauth/js": "^1.1.0",
     "@uniswap/sdk": "^3.0.3",
     "@walletconnect/web3-provider": "^1.6.6",
     "@web3-react/walletlink-connector": "^6.2.8",
